--- a/style.css
+++ b/style.css
@@ -1,60 +1,77 @@
-.navigation {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: sans-serif;
+}
+.header {
+  height: 220px;
   display: flex;
-  flex-direction: row;
-  height: 200 px;
   justify-content: space-around;
-  justify-items: center;
-  background-color: #274424;
+  flex-direction: row;
+  align-items: center;
+  background-color: gray;
   position: sticky;
 }
-.logo {
-  top: 5px;
-  width: 80px;
-  height: 50px;
-  border-radius: 20px;
+.logo img {
+  height: 200px;
+  width: 190px;
+  border-radius: 20%;
+  border-color: gray;
+  margin-left: 15px;
 }
-h2 {
-  color: rgb(160, 247, 109);
-  font-size: larger;
-}
-a {
-  color: white;
-  font-size: larger;
-}
-.presentation {
-  display: flex;
-  justify-items: center;
-  justify-content: center;
-  height: 300px;
-  background-color: #e1d6c6;
-}
-p {
-  color: darkgreen;
-  font-size: larger;
-  margin-left: 30px;
-  display: flex;
-}
-.type {
-  background-color: #e3d5c0;
-  display: flex;
-  justify-items: center;
-  justify-content: center;
-  flex-direction: row;
-  height: 300px;
-}
-h1 {
-  color: green;
+.info h1 {
   font-style: italic;
 }
-h3 {
-  color: rgb(73, 103, 28);
-  font-size: medium;
-  font-weight: 300;
-  font-style: oblique;
+.info button {
+  color: white;
+  background-color: rgb(22, 22, 231);
+  border-radius: 35%;
+  height: 70px;
+  width: 130px;
 }
-button {
-  background-color: #ffffff;
-  color: green;
-  font-style: normal;
-  border-radius: 30px;
+
+.intro {
+  height: 700px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
+.intro img {
+  height: 400px;
+  width: 400px;
+  border-color: black;
+  border-style: solid;
+  border-radius: 35%;
+  box-shadow: inset;
+}
+.intro text {
+  justify-items: center;
+  align-items: center;
+  margin: 30px;
+}
+.intro h1 {
+  font-size: large;
+  font-style: italic;
+  color: blue;
+  display: flex;
+  justify-items: center;
+  align-items: start;
+}
+img {
+  height: 350px;
+  width: 350px;
+}
+.top {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.end {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
